[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
pandas = "2.2.2"
fastapi = "0.111.0"
model-selection = "0.0.1"
scikit-learn = "^1.5.0"
requests3 = "0.0.0"
websockets = "12.0"
matplotlib = "^3.9.0"
polygon-api-client = "^1.13.7"
yfinance = "^0.2.40"
polygon = "^1.2.0"
keras = "^3.3.3"
numpy = "^1.26.4"
tensorflow = "2.16.1"
keras-models = "0.0.7"
tf = "^1.0.0"
pytz = "^2024.1"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"